--- a/pages/resolution/resolution.wxml
+++ b/pages/resolution/resolution.wxml
@@ -95,7 +95,7 @@
     </view>
     <view class="action">
       <text class="text-grey text-sm">{{shortVideoUrl}}</text>
-      <button bindtap="paste" class="cu-tag line-orange">点击粘贴链接</button>
+      <button bindtap="paste" class="cu-tag line-orange">点击粘贴</button>
     </view>
   </view>
 
@@ -108,6 +108,7 @@
 </view>
 
 <view class="padding flex flex-direction" wx:if="{{isButton}}">
+  <ad unit-id="adunit-7231837f2d60abae"></ad>
   <view class="cu-bar btn-group">
     <button class="cu-btn bg-green shadow-blur round lg" open-type="share">
       <text>分享好友</text>
@@ -133,6 +134,7 @@
         </view>
       </view>
     </video>
+    <ad unit-id="adunit-81449acc1b6c076e"></ad>
     <view class="cu-bar bg-white">
       <view class="action margin-0 flex-sub solid-left text-blue" bindtap="saveVideo">保存到相册</view>
     </view>
