refactor: resolution page

--- a/pages/resolution/resolution.wxml
+++ b/pages/resolution/resolution.wxml
@@ -15,12 +15,12 @@
 </view> -->
 
 <cu-custom bgColor="bg-gradual-blue">
-  <view slot="content">短视频一键去水印</view>
+  <view slot="content">短视频去水印解析工具</view>
 </cu-custom>
 
-<view class="adContainer">
-    <ad unit-id="adunit-059187315ea3e2d0"></ad>
-  </view>
+<!-- <view class="adContainer">
+  <ad unit-id="adunit-059187315ea3e2d0"></ad>
+</view> -->
 
 <view class="platforms">
     <!-- <text class="platforms-title">短视频去水印小帮手支持以下平台,部分平台不支持直接保存到相册</text> -->
@@ -74,11 +74,11 @@
 <view class="cu-list menu card-menu">
   <view class="cu-item {{menuArrow?'arrow':''}}">
     <view class="content">
-      <text class="cuIcon-warn text-red"></text>
-      <text class="text-grey">注意</text>
+      <text class="cuIcon-discover text-blue"></text>
+      <text class="text-grey">使用方式</text>
     </view>
     <view class="action">
-      <text class="text-grey text-sm">如果出现解析失败的情况请退出重试</text>
+      <text class="text-grey text-sm">请点击下方粘贴按钮</text>
     </view>
   </view>
 
@@ -110,7 +110,7 @@
   </view> -->
 </view>
 
-<view class="padding flex flex-direction" wx:if="{{isButton}}">
+<view class="flex flex-direction" wx:if="{{isButton}}">
   <view class="cu-bar btn-group">
     <button class="cu-btn bg-green shadow-blur round lg" open-type="share">
       分享好友
@@ -121,7 +121,7 @@
   </view>
 </view>
 
-<view class="adContainer">
+<view class="adContainer margin-bottom-18">
   <ad unit-id="adunit-7231837f2d60abae"></ad>
 </view>
 
@@ -144,8 +144,10 @@
     <view class="adContainer" wx:if="{{ isShow }}">
       <ad unit-id="adunit-81449acc1b6c076e"></ad>
     </view>
-    <view class="cu-bar bg-white">
-      <view class="action margin-0 flex-sub solid-left text-blue" bindtap="saveVideo">保存到相册</view>
+    <view class="padding flex flex-direction">
+      <button bindtap="saveVideo" class="cu-btn bg-green shadow-blur round lg">
+        <text>保存到相册<text class="cuIcon-album"></text></text>
+      </button>
     </view>
   </view>
 </view>
@@ -177,7 +179,7 @@
   </view>
 </view>
 
-<!-- <view class="grid col-2" style="margin: -4px 15px 0px">
+<view class="grid col-2" style="margin: -4px 15px 0px">
   <view class="bg-img padding-bottom-xl" style="background-image: url('https://mini.rcer666.cn/tip1.png');height: 600rpx; margin: 0px 3px 0px;width: 49%;">
     <view class="bg-shadeTop padding padding-bottom-xl">
       1. 进入短视频平台复制分享链接
@@ -188,4 +190,4 @@
       2. 粘贴刚刚复制的链接到本小程序，点击一键去除视频水印
     </view>
   </view>
-</view> -->
+</view>
