--- a/pages/resolution/resolution.wxss
+++ b/pages/resolution/resolution.wxss
@@ -1,5 +1,10 @@
 .adContainer {
-  width: 100%;
+  /* width: 100%; */
+  /* margin-bottom: 18rpx; */
+}
+
+.margin-bottom-18 {
+  margin-bottom: 18rpx;
 }
 
 page {
